--- a/.gitignore
+++ b/.gitignore
@@ -4598,3 +4598,4 @@ Datasets/ICDAR2013_Clipped/Male/M96.png
 Datasets/ICDAR2013_Clipped/Male/M97.png
 Datasets/ICDAR2013_Clipped/Male/M98.png
 Datasets/ICDAR2013_Clipped/Male/M99.png
+.DS_Store
