--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ CMP23-Dataset/.DS_Store
 CMP23-Dataset/.DS_Store
 Intelligence/.DS_Store
 CMP23-Dataset/.DS_Store
+CMP23-Dataset
 .DS_Store
 Original Dataset/Unspecified/.DS_Store
 Original Dataset/.DS_Store
